# abstract-video

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ThirdPartyNotices.txt  prepare.cmd  prepare.sh
.github/workflows/: continuous-integration-workflow.yaml
definitions/: api.xml
implementations/: CMakeLists.txt
implementations/avcodec/: CMakeLists.txt  common.hpp  container.cpp  container.hpp  context.cpp  context.hpp  platform.cpp  platform.hpp  stream.cpp  stream.hpp
include/AVIDEO/: avideo.h  avideo.hpp  avideo_icd.10.inc  avideo_impl.hpp  avideo_impl_dispatch.inc
samples/: CMakeLists.txt  DumpFrames.cpp  Playback.cpp
scripts/: ci-build.ps1  ci-build.sh  ci-package-artifacts.ps1  ci-package-artifacts.sh
tonel/AbstractVideo-CorePharo/: AVIDEO.class.st  AVIDEOBindingsCommon.class.st  AVIDEOCBindingsBase.class.st  AVIDEOError.class.st  AVIDEOInterface.class.st  AVIDEOMemoryCopier.class.st  package.st
tonel/AbstractVideo-CoreSqueak/: AVIDEO.class.st  AVIDEOBindingsCommon.class.st  AVIDEOCBindingsBase.class.st  AVIDEOError.class.st  AVIDEOInterface.class.st  AVIDEOMemoryCopier.class.st  package.st
tonel/AbstractVideo-GeneratedPharo/: AVIDEO.extension.st  AVIDEOCBindings.class.st  AVIDEOConstants.class.st  AVIDEOContainer.class.st  AVIDEOContext.class.st  AVIDEOContextOpenInfo.class.st  AVIDEOGeneratedDoIt.class.st  AVIDEOPlatform.class.st  AVIDEOStream.class.st  AVIDEOTypes.class.st  package.st
tonel/AbstractVideo-GeneratedSqueak/: AVIDEO.extension.st  AVIDEOCBindings.class.st  AVIDEOConstants.class.st  AVIDEOContainer.class.st  AVIDEOContext.class.st  AVIDEOContextOpenInfo.class.st  AVIDEOGeneratedDoIt.class.st  AVIDEOPlatform.class.st  AVIDEOStream.class.st  package.st
tonel/BaselineOfAbstractVideo/: BaselineOfAbstractVideo.class.st  package.st
